--- a/css/style.css
+++ b/css/style.css
@@ -2,76 +2,20 @@
   box-sizing: border-box;
 }
 
-
-.restaurant-list {
-    width: 100%;
+nav {
+  margin: 0 auto;
+  padding: 0 0 20px 15px;
+  position: fixed;
 }
 
-.location:hover {
-  background-color: #a1a1a1;
+.arrow-left {
+  margin-left: -15px;
+  padding-top: 10px;
+  padding-left: 10px;
+  height: 50px;
+  width: 420px;
+  background-color: black;
 }
-.content h1 {
-  font-size:18px;
-  font-weight: bold;
-  color:#131516;
-}
-.content h3 {
-  font-size: 14px;
-  color:#131516;
-}
-
-
-
-
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
 
 body {
   background-color: #333;
@@ -79,28 +23,47 @@ body {
   font-size: 10px;
 }
 
+.restaurant-list {
+    width: 100%;
+    margin: auto;
+    padding-top: 50px;
+    background-color: #dadada;
+}
+
+.location:hover {
+  height: 65px;
+  width: 100%;
+  background-color: #a1a1a1;
+}
+
+.content {
+  width: 100%;
+  height: 65px;
+  border-bottom: 1px solid #a1a1a1;
+  padding: 20px;
+}
+
+.content h1 {
+  font-size:18px;
+  font-weight: bold;
+  color:#131516;
+}
+.content h3 {
+  padding-bottom: 30px;
+  font-size: 14px;
+  color:#131516;
+}
+
 .container {
   margin: 0 auto;
   width: 420px;
 }
 
-.header h1 {
-  font-size:18px;
-  font-weight: bold;
-  color:#131516;
-}
-.header h3 {
-  font-size: 14px;
-  color:#131516;
-}
-
-nav {
-  margin: 0 auto;
-  padding: 10px 0 15px 15px;
-  position: fixed;
-  width: 420px;
-}
-
-.restaurant-list {
-  padding-top: 50px;
+.arrow {
+  margin-top: -40px;
+  padding-right: 30px;
+  height: 40px;
+  width: 15px;
+  float: right;
+  display: block;
 }
